--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -51,7 +51,6 @@ Theme Styles
 body {
   box-sizing: border-box;
   color:#373737;
-  background: #212121;
   font-size: 16px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -98,7 +97,11 @@ p {
 }
 
 footer p {
-  color: #f2f2f2;
+  color: #666;
+}
+footer a {
+  color: #666;
+  text-decoration: underline;
 }
 
 a {
@@ -120,10 +123,6 @@ a {
 
 a:hover, a:focus {text-decoration: underline;}
 
-footer a {
-  color: #F2F2F2;
-  text-decoration: underline;
-}
 
 em {
   font-style: italic;
@@ -258,10 +257,10 @@ form {
 Full-Width Styles
 *******************************************************************************/
 
+
 .outer {
   width: 100%;
 }
-
 .inner {
   position: relative;
   max-width: 640px;
@@ -283,6 +282,18 @@ Full-Width Styles
   border-bottom-left-radius: 2px;
   border-bottom-right-radius: 2px;
 }
+#header_wrap{
+
+  background-color: #222;
+  border-bottom: 1px solid #dedede;
+}
+#header_wrap *{
+  color: #ddd;
+}
+
+/*
+
+
 
 #header_wrap {
   background: #212121;
@@ -365,6 +376,7 @@ Full-Width Styles
 #footer_wrap {
   background: #212121;
 }
+*/
 
 
 
